--- a/www/templates/medi.html
+++ b/www/templates/medi.html
@@ -34,6 +34,6 @@
             </ul>
         </div>
         <br/>
-        <button ng-click="deleteMedi($stateParams.mediId)">delete</button>
+        <button class="button button-block button-positive" ng-click="deleteMedi($stateParams.mediId)">delete</button>
     </ion-content>
 </ion-view>
