Timer vergleich mit Beispieldaten OK

--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -84,6 +84,7 @@
                     Sonntag
                 </li>
                 <!-- auswahl der Zeiten -->
+                <!-- <input type=time min=9:00 max=17:00 step=900> - 15m increments -->
                 <label class="item item-input item-select">
                     <div class="input-label">
                         Zeit
