Konvertierung des medis arrays macht fortschritte

--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -10,5 +10,10 @@
                 {{medi.name}}
             </ion-item>
         </ion-list>
+        <p>medis slice:</p>
+        {{medisSlice}}
+        <br>
+        <p>medis slice object</p>
+        {{medisSliceObj}}
     </ion-content>
 </ion-view>
