--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -10,5 +10,6 @@
                 {{medi.name}}
             </ion-item>
         </ion-list>
+        {{tagesZeiten}}
     </ion-content>
 </ion-view>
