--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -10,6 +10,6 @@
                 {{medi.name}}
             </ion-item>
         </ion-list>
-        {{tagesZeiten}}
+        {{timerData}}
     </ion-content>
 </ion-view>
