medi editieren ok

--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -98,9 +98,9 @@
                 <!-- <label class="item item-input">
                    <input type="time" min="00.00" max="23:30" step="1800" ng-model="medi.timers.zeiten"> 
                 </label> -->
-                <pre>Meine Zeiten = {{medi.timers.zeiten}}</pre>
+<!--                 <pre>Meine Zeiten = {{medi.timers.zeiten}}</pre>
                 <tt>Tage = {{medi.timers.tage}}</tt>
-                <br/>
+                <br/> -->
                 <label class="item item-input">
                     <input type="number" ng-model="medi.timers.menge" min="0" max="10" placeholder="Menge (z.B. 0,5)">
                 </label>
@@ -112,7 +112,7 @@
                 </button>
             </div>
         </form>
-        <pre>Medi = {{medi | json}}</pre>
-    </ion-content>
+<!--         <pre>Medi = {{medi | json}}</pre>
+ -->    </ion-content>
 </ion-view>
 <!-- <input type="checkbox" ng-model="timers.tage[tag.tagE]" ng-checked="true"> -->
