editieren inkl. aktualisieren des Local Storage oK

--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -1,10 +1,11 @@
 <ion-view view-title="Medikament hinzufügen">
     <ion-content>
-        <form name="myForm">
+        <form name="addMediForm" ng-submit="addMedi(medi)" novalidate>
             <h3>Medikament erfassen</h3>
             <div class="list">
+
                 <label class="item item-input">
-                    <input type="text" ng-model='medi.name' placeholder="Name" name="mediname">
+                    <input type="text" ng-model='medi.name' placeholder="Name" name="mediname" required>
                     <!-- wenn vorgabe wert erwünscht: ng-init="medi.name='Aspirin'" -->
                 </label>
                 <label class="item item-input">
@@ -32,7 +33,6 @@
                     <span class="input-label">Rezept gültig bis</span>
                     <input type="date" ng-model='medi.rezeptende'>
                 </label>
-                <h3>Medikament terminieren</h3>
                 <!-- selektieren der Tage -->
                 <!--                 <div ng-repeat="tag in tage">
                     <li class="item item-checkbox">
@@ -90,7 +90,7 @@
                     <div class="input-label">
                         Zeit
                     </div>
-                    <select ng-model="medi.timers.zeiten" multiple ng-options="zeit as zeit for zeit in zeiten">
+                    <select ng-model="medi.timers.zeiten" multiple ng-options="zeit as zeit for zeit in zeiten" required name="meditimerszeiten">
                         <!-- <select ng-model="timers.zeiten" multiple ng-options="zeit.zeitE as zeit.zeitD for zeit in zeiten "> -->
                     </select>
                 </label>
@@ -98,16 +98,16 @@
                 <!-- <label class="item item-input">
                    <input type="time" min="00.00" max="23:30" step="1800" ng-model="medi.timers.zeiten"> 
                 </label> -->
-<!--                 <pre>Meine Zeiten = {{medi.timers.zeiten}}</pre>
-                <tt>Tage = {{medi.timers.tage}}</tt>
-                <br/> -->
+                <!-- <pre>Meine Zeiten = {{medi.timers.zeiten}}</pre> -->
+<!--                 <tt>Tage = {{medi.timers.tage}}</tt>
+ -->                <br/>
                 <label class="item item-input">
                     <input type="number" ng-model="medi.timers.menge" min="0" max="10" placeholder="Menge (z.B. 0,5)">
                 </label>
                 <label class="item item-input">
                     <input type="text" ng-model="medi.timers.info" placeholder="Infos (z.B. nach den Mahlzeiten)">
                 </label>
-                <button class="button button-block button-positive" ng-click="addMedi(medi)">
+                <button type="submit" class="button button-block button-positive" ng-disabled="addMediForm.mediname.$invalid || addMediForm.meditimerszeiten.$invalid || medi.timers.tage==null">
                     Medikament speichern
                 </button>
             </div>
