--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -5,7 +5,7 @@
             <div class="list">
 
                 <label class="item item-input">
-                    <input type="text" ng-model='medi.name' placeholder="Name" name="mediname" required>
+                    <input type="text" ng-model='medi.name' placeholder="Name" name="mediname" required autofocus>
                     <!-- wenn vorgabe wert erwünscht: ng-init="medi.name='Aspirin'" -->
                 </label>
                 <label class="item item-input">
@@ -20,7 +20,9 @@
                 <label class="item item-input">
                     <input type="number" ng-model='medi.packungsgroesse' min="1" max="1000" placeholder="Packungsgrösse (Stk)" name="medipackungsgroesse">
                 </label>
-                <div class="item item-toggle">
+                <!-- Rezept Funktion -->
+                <!-- ******************************************************* -->
+<!--                 <div class="item item-toggle">
                     Medikament Rezeptfplichtig
                     <label class="toggle toggle-assertive">
                         <input type="checkbox" ng-model='medi.rezeptpflichtig'>
@@ -32,7 +34,8 @@
                 <label class="item item-input" ng-show="medi.rezeptpflichtig == true">
                     <span class="input-label">Rezept gültig bis</span>
                     <input type="date" ng-model='medi.rezeptende'>
-                </label>
+                </label> -->
+                <!-- *************************************************************** -->
                 <!-- selektieren der Tage -->
                 <!--                 <div ng-repeat="tag in tage">
                     <li class="item item-checkbox">
