--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -2,6 +2,7 @@
     <ion-content>
         <a href="#/app/addMedi">
             <button class="button button-block button-balanced">
+             <!-- ng-click="$state.go('app.medis')" -->
                 Medikament hinzufügen
             </button>
         </a>
