--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-<button class="button button-large icon ion-plus-circled" ng-click="goAddMedi()"></button>
+<button class="button icon ion-plus-circled" ng-click="goAddMedi()"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
