--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -11,5 +11,10 @@
                 {{medi.name}}
             </ion-item>
         </ion-list>
+        <h3>Local Notification Test</h3>
+        <button class="button" ng-click="add()">Add notification</button>
+    <button class="button" ng-click="isScheduled()">Is Scheduled</button>
+    <br>
+    <button class="button" ng-click="notifi()">Test</button>
     </ion-content>
 </ion-view>
