--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -16,5 +16,10 @@
     <button class="button" ng-click="isScheduled()">Is Scheduled</button>
     <br>
     <button class="button" ng-click="notifi()">Test</button>
+    <br>
+    {{timersData}}
+    <br>
+    {{timerData}}
+    <br>
     </ion-content>
 </ion-view>
