Benachrichtigungen werdne angezeigt

--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -3,8 +3,9 @@
     <h1>Benachrichtigungen:</h1>
 <!--             {{allNotifications}}
  -->        <ion-list>
-            <ion-item ng-repeat="notification in allNotifications" href="#/app/notifications/{{notification.id}}">
-                {{notification.data.timer}} {{notification.at | date: 'dd.MM.yyyy HH:mm'}}
+            <ion-item ng-repeat="notification in allNotifications | orderBy: 'at'" href="#/app/notifications/{{notification.id}}">
+                <!-- {{notification.title}} {{notification.at | date: 'dd.MM.yyyy HH:mm'}} -->
+                {{notification.name}} {{notification.date | date: 'dd.MM HH:mm'}}
             </ion-item>
         </ion-list>
     </ion-content>
