--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -1,19 +1,26 @@
 <ion-view view-title="Medikament hinzufügen">
     <ion-content>
         <form name="addMediForm" ng-submit="addMedi(medi)" novalidate>
-            <h3>Medikament erfassen</h3>
-            <div class="list">
+            <div class="list list">
 
                 <label class="item item-input">
                     <input type="text" ng-model='medi.name' placeholder="Name" name="mediname" required autofocus>
                     <!-- wenn vorgabe wert erwünscht: ng-init="medi.name='Aspirin'" -->
                 </label>
-                <label class="item item-input">
-                    <input type="number" ng-model='medi.menge' min="0" max="10000" placeholder="Menge z.B. 250" name="medimenge">
+                <div class="row">
+                    <div class="col">
+                <label class="item item-input item-stacked-label">
+                <span class="input-label">Menge</span>
+                    <input type="number" ng-model='medi.menge' min="0" max="10000" placeholder="z.B. 250" name="medimenge">
                 </label>
-                <label class="item item-input">
-                    <input type="text" ng-model='medi.einheit' placeholder="Einheit z.B. mg" name="medieinheit">
+                </div>
+                <div class="col">
+                <label class="item item-input item-stacked-label">
+                <span class="input-label">Einheit</span>
+                    <input type="text" ng-model='medi.einheit' placeholder="z.B. mg" name="medieinheit">
                 </label>
+                </div>
+                </div>
                 <label class="item item-input">
                     <input type="text" ng-model='medi.anwendungsform' placeholder="Anwendungsform z.B. Tabletten" name="medianwendungsform">
                 </label>
@@ -119,7 +126,7 @@
                 <label class="item item-input">
                     <input type="text" ng-model="medi.timers.info" placeholder="Infos (z.B. nach den Mahlzeiten)">
                 </label>
-                <button type="submit" class="button button-block button-positive" ng-disabled="addMediForm.mediname.$invalid || addMediForm.meditimerszeiten.$invalid || medi.timers.tage==null">
+                <button type="submit" class="button button-block button-balanced" ng-disabled="addMediForm.mediname.$invalid || addMediForm.meditimerszeiten.$invalid || medi.timers.tage==null">
                     Medikament speichern
                 </button>
             </div>
