--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -5,7 +5,7 @@
             <ion-item ng-repeat="notification in allNotifications | orderBy : 'date'">
              <!-- | orderBy: 'at' -->
                 <!-- {{notification.title}} {{notification.at | date: 'dd.MM.yyyy HH:mm'}} -->
-                {{notification.name}} {{notification.date | date: 'dd.MM HH:mm'}}
+                 {{notification.date | date: 'dd.MM HH:mm'}} {{notification.name}}
             </ion-item>
         </ion-list>
     </ion-content>
