--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Medi-Liste">
     <ion-content>
-        <h3>Geplante Benachrichtigungen:</h3>
+        <div class="bar bar-header bar-royal">
+            <h3 class="title">Geplante Benachrichtigungen</h3>
+        </div>
         <ion-list>
             <ion-item ng-repeat="notification in allNotifications | orderBy : 'date'">
-             <!-- | orderBy: 'at' -->
-                <!-- {{notification.title}} {{notification.at | date: 'dd.MM.yyyy HH:mm'}} -->
-                 {{notification.date | date: 'dd.MM HH:mm'}} {{notification.name}}
+                {{notification.date | date: 'dd.MM HH:mm'}} {{notification.name}}
             </ion-item>
         </ion-list>
     </ion-content>
